# mimx-tables

./: Makefile.am  README  autogen.sh  configure.ac  latex.mim  latex.mim.in  mimx-ibus-table.c  mimx-table.c  mr-inscript-typing-booster.mim  mr-inscript-typing-booster.mim.in  mr-phonetic-typing-booster.mim  mr-phonetic-typing-booster.mim.in  table-util.mim
